        * TEST: Internal tests changes to ease integration with core.

        * TEST: Checks added for empty 'errno' string in basic_exceptions.t

        * TEST: Errors should end with a newline.

        * TEST: fork tests should no longer mysteriously fail
          on Solaris.

        * TEST: backcompat.t should no longer give strange failures on
          old versions of 5.8.3 or earlier.

1.99 Mon Jul 21 02:25:23 PDT 2008

        * RELEASE CODENAME: "jarich", in thanks for her giving
          up pretty much a whole week of her life to do nothing
          but help me work on my talks for OSCON.

        * BUGFIX: autodie will now check open() for returning
          undef, not merely false, as open() can legimiately
          return zero for open(my $fh, '-|') || exec(...) style
          calls.

        * TEST: Added t/lethal.t, a test for basic subclassing.

        * TEST: Added t/usersub.t, a test for correct handling
          of user subroutines.

        * DOCUMENTATION: Noted in autodie.pm that user subs can
          only be made Fatal/autodying if they've been declared
          first.

        * FEATURE: Conflicts between 'no autodie' and 'use Fatal'
          re-enabled.

        * FEATURE: Added sysopen() and fcntl() to :file, and
          exec() and system to :system.  exec() doesn't yet work
          due to its prototype;

        * FEATURE: Vanilla 'use autodie' now implies
          'use autodie qw(:default)'.  This excludes system(),
          which depends upon an optional module, and exec(),
          which breaks its exotic form.

        * TEST: Internal tests moved from Fatal.t to
          internal.t

        * FEATURE: Added support for fileno.

        * FEATURE: Addded support for exec (although this
          breaks the exotic form while autodie is in scope).

        * BUGFIX: 'no autodie' now plays nicely with user subs.

        * DOCUMENTATION: Added a brief mention of the category
          system that autodie provides.
