@@ -45,8 +45,6 @@ sub admin {
     $_[0]->_top->{admin} or Module::Install::Base::FakeAdmin->new;
 }
 
-#line 101
-
 sub is_admin {
     $_[0]->admin->VERSION;
 }
@@ -69,4 +67,4 @@ BEGIN {
 
 1;
 
-#line 146
+#line 138
